hm1-workWithFile part 4